--- a/src/containers/home/home.scss
+++ b/src/containers/home/home.scss
@@ -106,6 +106,8 @@
     max-width: 1036px;
     left: 50%;
     transform: translate(-50%, 0);
+    // for compatibility
+    -webkit-transform: translate(-50%, 0);
   }
 
   .partners-carousel-arrow-left,
@@ -121,11 +123,15 @@
   .partners-carousel-arrow-left {
     left: 0;
     transform: translate(-100%, -50%);
+    // for compatibility
+    -webkit-transform: translate(-100%, -50%);
   }
 
   .partners-carousel-arrow-right {
     right: 0;
     transform: translate(100%, -50%);
+    // for compatibility
+    -webkit-transform: translate(100%, -50%);
   }
 
   .partners-carousel {
@@ -152,6 +158,9 @@
       max-height: 100%;
       top: 50%;
       transform: translateY(-50%);
+      // for compatibility
+      -webkit-transform: translateY(-50%);
+
       position: relative;
       user-select: none;
     }
